--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "swiper": "^11.1.4",
+    "vue": "^3.2.13",
+    "vue-google-signin-button": "^1.0.4",
+    "vue-router": "^4.3.2",
+    "vue3-google-login": "^2.0.26",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
